# assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  MIGRATION_COMPLETE.md  PLANNING.md  README.md  Rules.md  TASKS.md  ci_test.sh  docker-compose.yml  gui.py  main.py  pyproject.toml  requirements.txt  streamlit_gui.py  test_coordination.py
.github/workflows/: ci.yml
PRPs/code_reviews/: review1.md
PRPs/scripts/: prp_runner.py
agent/: agent.py  dependencies.py  prompts.py  prompts_old.py  tools.py
config/: settings.py
docs/: multi_tool_workflows.md  usage_examples.md
mcp_servers/: configs.py
searxng/: settings.yml
tests/: test_agent.py  test_config.py  test_gui_integration.py  test_integration_obsidian.py  test_integration_todoist.py  test_logging.py  test_multi_tool_coordination.py  test_obsidian_mcp.py  test_obsidian_tools.py  test_real_integration.py  test_searxng_mcp.py  test_todoist_mcp.py  test_youtube_mcp.py
tools/: obsidian.py  search.py  tasks.py  youtube.py
tools/obsidian/: __init__.py  core.py  search.py  tags.py  types.py  utils.py
utils/: bedrock_vision.py  graceful_degradation.py  logger.py  screen_capture.py  server_monitor.py
